--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,42 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="TextInputLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/_42sdp</item>
-        <item name="android:textColor">@color/black_font</item>
-        <item name="boxBackgroundColor">@color/fillColor</item>
-        <item name="boxStrokeWidth">0dp</item>
-        <item name="boxStrokeWidthFocused">0dp</item>
-        <item name="boxCornerRadiusBottomEnd">10dp</item>
-        <item name="boxCornerRadiusBottomStart">10dp</item>
-        <item name="boxCornerRadiusTopEnd">10dp</item>
-        <item name="boxCornerRadiusTopStart">10dp</item>
+    <style name="EditTextStyleSingleLine" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_marginStart">@dimen/_16sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_16sdp</item>
+        <item name="android:inputType">text</item>
+        <item name="textAllCaps">@dimen/_14ssp</item>
+        <item name="backgroundTint">@color/fillColor</item>
     </style>
 
-    <style name="TextInputMultiStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black_font</item>
-        <item name="android:layout_marginStart">@dimen/_22sdp</item>
-        <item name="android:layout_marginEnd">@dimen/_22sdp</item>
-        <item name="boxBackgroundColor">@color/fillColor</item>
-        <item name="boxStrokeWidth">0dp</item>
-        <item name="boxStrokeWidthFocused">0dp</item>
-        <item name="boxCornerRadiusBottomEnd">10dp</item>
-        <item name="boxCornerRadiusBottomStart">10dp</item>
-        <item name="boxCornerRadiusTopEnd">10dp</item>
-        <item name="boxCornerRadiusTopStart">10dp</item>
+    <style name="EditTextStyleMultiLine" parent="Widget.AppCompat.EditText">
+        <item name="android:layout_marginStart">@dimen/_16sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_16sdp</item>
+        <item name="android:inputType">textMultiLine</item>
+        <item name="backgroundTint">@color/fillColor</item>
     </style>
 
-    <style name="TextEditLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="hintEnabled">false</item>
-        <item name="android:textColor">@color/black_font</item>
-        <item name="android:gravity">center_vertical</item>
+    <style name="ButtonStyle" parent="ThemeOverlay.Material3.Button">
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="cornerRadius">@dimen/_10sdp</item>
+        <item name="backgroundTint">@color/primary</item>
     </style>
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:textColor">@color/black_font</item>
+        <item name="paddingStart">@dimen/_16sdp</item>
+        <item name="paddingEnd">@dimen/_16sdp</item>
+        <item name="android:layout_marginStart">@dimen/_16sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_16sdp</item>
+    </style>
+
+    <!--    <style name="TextInputLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">-->
+    <!--        <item name="android:layout_width">match_parent</item>-->
+    <!--        <item name="android:layout_height">@dimen/_42sdp</item>-->
+    <!--        <item name="android:textColor">@color/black_font</item>-->
+    <!--        <item name="boxBackgroundColor">@color/fillColor</item>-->
+    <!--        <item name="boxStrokeWidth">0dp</item>-->
+    <!--        <item name="boxStrokeWidthFocused">0dp</item>-->
+    <!--        <item name="boxCornerRadiusBottomEnd">10dp</item>-->
+    <!--        <item name="boxCornerRadiusBottomStart">10dp</item>-->
+    <!--        <item name="boxCornerRadiusTopEnd">10dp</item>-->
+    <!--        <item name="boxCornerRadiusTopStart">10dp</item>-->
+    <!--    </style>-->
+
+    <!--    <style name="TextInputMultiStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">-->
+    <!--        <item name="android:layout_width">match_parent</item>-->
+    <!--        <item name="android:layout_height">wrap_content</item>-->
+    <!--        <item name="android:textColor">@color/black_font</item>-->
+    <!--        <item name="android:layout_marginStart">@dimen/_22sdp</item>-->
+    <!--        <item name="android:layout_marginEnd">@dimen/_22sdp</item>-->
+    <!--        <item name="boxBackgroundColor">@color/fillColor</item>-->
+    <!--        <item name="boxStrokeWidth">0dp</item>-->
+    <!--        <item name="boxStrokeWidthFocused">0dp</item>-->
+    <!--        <item name="boxCornerRadiusBottomEnd">10dp</item>-->
+    <!--        <item name="boxCornerRadiusBottomStart">10dp</item>-->
+    <!--        <item name="boxCornerRadiusTopEnd">10dp</item>-->
+    <!--        <item name="boxCornerRadiusTopStart">10dp</item>-->
+    <!--    </style>-->
+
+    <!--    <style name="TextEditLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">-->
+    <!--        <item name="android:layout_width">match_parent</item>-->
+    <!--        <item name="android:layout_height">wrap_content</item>-->
+    <!--        <item name="hintEnabled">true</item>-->
+    <!--        <item name="expandedHintEnabled">false</item>-->
+    <!--        <item name="android:layout_centerVertical">true</item>-->
+    <!--        <item name="android:textColor">@color/black_font</item>-->
+    <!--        <item name="android:gravity">center_vertical</item>-->
+    <!--        <item name="android:textSize">@dimen/_14ssp</item>-->
+    <!--    </style>-->
+
 
     <!--    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
     <!--        <item name="boxStrokeColor">@drawable/text_input_layout_color_state</item>-->
@@ -46,7 +80,4 @@
     <!--        <item name="boxBackgroundColor">@color/bg_text_input_layout</item>-->
     <!--    </style>-->
 
-    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
-        <item name="android:textColor">@color/black_font</item>
-    </style>
 </resources>
