--- a/app/src/main/res/layout/activity_add_recipe.xml
+++ b/app/src/main/res/layout/activity_add_recipe.xml
@@ -8,16 +8,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/_22sdp"
             android:layout_marginStart="@dimen/_22sdp"
-            android:layout_marginEnd="@dimen/_22sdp">
+            android:layout_marginEnd="@dimen/_22sdp"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/_22sdp">
 
             <TextView
                 android:id="@+id/tv_recipe_input_link"
@@ -26,8 +25,8 @@
                 android:layout_marginTop="@dimen/_50sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_copy_link_image"
-                android:textSize="@dimen/_14ssp"
-                android:textColor="@color/black_font"/>
+                android:textColor="@color/black_font"
+                android:textSize="@dimen/_14ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -37,9 +36,9 @@
 
                 <EditText
                     android:id="@+id/et_recipe_input_link"
+                    style="@style/EditTextStyleSingleLine"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditTextStyleSingleLine" />
+                    android:layout_height="wrap_content" />
 
             </FrameLayout>
 
@@ -50,8 +49,8 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_hint_recipe_name"
-                android:textSize="@dimen/_14ssp"
-                android:textColor="@color/black_font" />
+                android:textColor="@color/black_font"
+                android:textSize="@dimen/_14ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -61,9 +60,9 @@
 
                 <EditText
                     android:id="@+id/et_recipe_name"
+                    style="@style/EditTextStyleSingleLine"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditTextStyleSingleLine" />
+                    android:layout_height="wrap_content" />
 
             </FrameLayout>
 
@@ -74,8 +73,8 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_recipe_categories"
-                android:textSize="@dimen/_14ssp"
-                android:textColor="@color/black_font"/>
+                android:textColor="@color/black_font"
+                android:textSize="@dimen/_14ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -85,9 +84,9 @@
 
                 <Spinner
                     android:id="@+id/spinner_categories"
+                    style="@style/SpinnerStyle"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
-                    style="@style/SpinnerStyle"
                     android:entries="@array/categories" />
 
             </FrameLayout>
@@ -99,8 +98,8 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_hint_recipe_ingredients"
-                android:textSize="@dimen/_14ssp"
-                android:textColor="@color/black_font" />
+                android:textColor="@color/black_font"
+                android:textSize="@dimen/_14ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -110,9 +109,9 @@
 
                 <EditText
                     android:id="@+id/et_recipe_ingredients"
+                    style="@style/EditTextStyleMultiLine"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditTextStyleMultiLine" />
+                    android:layout_height="wrap_content" />
 
             </FrameLayout>
 
@@ -124,7 +123,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_recipe_instructions"
                 android:textColor="@color/black_font"
-                android:textSize="@dimen/_14ssp"/>
+                android:textSize="@dimen/_14ssp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -134,27 +133,20 @@
 
                 <EditText
                     android:id="@+id/et_recipe_instructions"
+                    style="@style/EditTextStyleMultiLine"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditTextStyleMultiLine" />
+                    android:layout_height="wrap_content" />
 
             </FrameLayout>
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_update_recipe"
-                style="@style/ButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_42sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="@string/btn_update_recipe" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_delete_recipe"
+                android:id="@+id/btn_save_recipe"
                 style="@style/ButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_42sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_22sdp"
-                android:text="@string/btn_delete_recipe" />
+                android:text="@string/btn_save_recipe" />
 
         </LinearLayout>
     </ScrollView>
