--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_marginStart">@dimen/_16sdp</item>
         <item name="android:layout_marginEnd">@dimen/_16sdp</item>
         <item name="android:inputType">text</item>
-        <item name="textAllCaps">@dimen/_14ssp</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
         <item name="backgroundTint">@color/fillColor</item>
     </style>
 
@@ -13,7 +13,9 @@
         <item name="android:layout_marginStart">@dimen/_16sdp</item>
         <item name="android:layout_marginEnd">@dimen/_16sdp</item>
         <item name="android:inputType">textMultiLine</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
         <item name="backgroundTint">@color/fillColor</item>
+        <item name="android:minHeight">@dimen/_64sdp</item>
     </style>
 
     <style name="ButtonStyle" parent="ThemeOverlay.Material3.Button">
