--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.home.HomeActivity">
+    tools:context=".ui.main.home.HomeActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_start"
