--- a/app/src/main/res/layout/layout_welcome.xml
+++ b/app/src/main/res/layout/layout_welcome.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/iv_welcome"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="Add your Popular Meal and lets get started"
+        tools:text="@string/text_welcome"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
