--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -31,7 +31,7 @@
         android:id="@+id/tv_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_category"
+        tools:text="@string/text_category"
         android:textColor="@color/black_font"
         android:fontFamily="@font/roboto_bold"
         android:textSize="@dimen/_12ssp"
