--- a/app/src/main/res/layout/layout_welcome.xml
+++ b/app/src/main/res/layout/layout_welcome.xml
@@ -34,13 +34,13 @@
         android:fontFamily="@font/poppins_bold"
         android:textAlignment="center"
         android:textColor="@color/black_font"
+        android:text="@string/text_welcome"
         android:textSize="@dimen/_12ssp"
         android:visibility="gone"
         android:padding="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@id/iv_welcome"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="@string/text_welcome"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
